tests/paczka1/fuzzy1/53706032.err
Error in line 3: MSFG A745 41,1
Error in line 11: uWyUQYhYUj S106 58,7
Error in line 34: 7pn1nqIMJS S106 74,2
